<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_categories">Categories</string>
    <string name="title_reports">Reports</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_alert">Alert</string>

    <string name="total_balance">Total Balance </string>
    <string name="add_account">Add Account</string>
    <string name="delete">"Delete "</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="balance">Balance</string>
    <string name="account_type">Account Type</string>
    <string name="new_account_type">New Account Type</string>
    <string name="edit_account">Edit Account</string>

    <string name="account_name">Account Name</string>
    <string name="threshold">Threshold</string>
    <string name="set_alert">Set/Edit Alert</string>
    <string name="new_threshold">New Threshold</string>
    <string name="set">Set</string>

    <string name="incomes">INCOMES</string>
    <string name="expenses">EXPENSES</string>
    <string name="list">List</string>
    <string name="line_graph">Line Graph</string>
    <string name="bar_graph">Bar Graph</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">ADD INCOME</string>
    <string name="add_Transaction">ADD EXPENSE</string>
    <string name="add_income">ADD INCOME</string>
    <string name="select_category">Select Category</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="amount">Amount</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="daily">daily</string>
    <string name="monthly">monthly</string>
    <string name="yearly">yearly</string>
    <string name="custom">custom</string>
    <string name="from">From:MM-DD-YYYY</string>
    <string name="to">To:MM-DD-YYYY</string>
    <string name="weekly">weekly</string>
    <string name="ok">OK</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="select_transaction_type">Select Transaction type</string>
    <string name="income">INCOME</string>
    <string name="expense">EXPENSE</string>


</resources>