<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_baseline_categories_24"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_transaction" />
    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title= "@string/title_accounts" />
    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alert" />


</menu>