<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reports">

    <fragment
        android:id="@+id/navigation_reports"
        android:name="at.ac.univie.t0306.expensetracker.ui.reports.reportViewFragments.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="at.ac.univie.t0306.expensetracker.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="at.ac.univie.t0306.expensetracker.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />
    <fragment
        android:id="@+id/navigation_accounts"
        android:name="at.ac.univie.t0306.expensetracker.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />
    <fragment
        android:id="@+id/navigation_alert"
        android:name="at.ac.univie.t0306.expensetracker.ui.alert.AlertFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_alert" />
</navigation>